--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Git Sumbodule Update
         run: |
-          git pull --recurse-submodules
-          git submodule update --remote --recursive  
+          git submodule pull https://github.com/CaiJimmy/hugo-theme-stack/ themes/hugo-theme-stack
 
       - name: Build
         run: hugo
