--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,15 +14,15 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
+      - name: Git Sumbodule Update
+        run: |
+          git submodule sync
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.120.4'
           extended: true
-
-      - name: Git Sumbodule Update
-        run: |
-          git submodule sync https://github.com/CaiJimmy/hugo-theme-stack/ themes/hugo-theme-stack
 
       - name: Build
         run: hugo
