--- a/themes/hugo-theme-stack/config.yaml
+++ b/themes/hugo-theme-stack/config.yaml
@@ -140,3 +140,8 @@ params:
             enabled: true
         content:
             enabled: true
+
+disableKinds:
+  - "taxonomy"
+  - "taxonomyTerm"
+  - "home"
